--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
+a {
+  transition: all 0.5s ease;
+}
+
 /* H2 Styles
    ========================================================================== */
 
@@ -74,13 +78,11 @@ h3 a:hover {
   text-decoration: none;
   font-weight: 600;
   color: #5b5b5b;
-  transition: all 0.5s ease;
 }
 
 #about a:hover {
   text-decoration: none;
   color: #d93d26;
-  transition: all 0.5s ease;
 }
 
 #footer {
