--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h2 {
 h3 {
   font-family: "Nimbus Sans", sans-serif;
   font-size: 24px;
+  font-weight: 300;
   color: #a2a2a2;
   padding: 0 0 15px 0;
   margin: 0 0 45px 0 !important;
