--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,27 @@ a {
   transition: all 0.5s ease;
 }
 
+/* Content Styles
+   ========================================================================== */
+
+.container {
+  display: table;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.content {
+  display: block;
+  margin: 0 auto;
+  width: 500px;
+}
+
 /* H2 Styles
    ========================================================================== */
 
@@ -31,7 +52,6 @@ h3 {
   font-weight: 300;
   color: #a2a2a2;
   padding: 0 0 15px 0;
-  /* margin: 0 0 45px 0 !important; */
   border-bottom: 1px dotted #a2a2a2;
 }
 
@@ -78,11 +98,6 @@ h3 a:hover {
 #about a:hover {
   text-decoration: none;
   color: #d93d26;
-}
-
-.container {
-  width: 50%;
-  margin: 25% auto 0;
 }
 
 #footer {
