--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h3 a:hover {
   line-height: 1.591em;
   letter-spacing: 0.015em;
   color: #5b5b5b;
+  margin: 80px 0;
 }
 
 #about p:first-child:first-letter {
